--- a/config/config.yaml
+++ b/config/config.yaml
@@ -14,3 +14,9 @@ data_validation:
 data_transformation:
   root_dir: artifacts/data_transfromation
   data_path: artifacts/data_ingestion/winequality-red.csv
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  train_data_path: artifacts/data_transfromation/train.csv
+  test_data_path: artifacts/data_transfromation/test.csv
+  model_name: model.joblib
